# plane_sweep

./: CMakeLists.txt
data/: 110608_Oslo_0502.txt  110608_Oslo_0503.txt  110608_Oslo_0504.txt  110608_Oslo_0505.txt  110608_Oslo_0506.txt  110608_Oslo_0507.txt  110608_Oslo_0508.txt  110608_Oslo_0509.txt  110608_Oslo_0510.txt  110608_Oslo_0511.txt  110608_Oslo_0512.txt  110608_Oslo_0513.txt  110608_Oslo_0514.txt  110608_Oslo_0515.txt  110608_Oslo_0516.txt  110608_Oslo_0517.txt  110608_Oslo_0518.txt  110608_Oslo_0519.txt  110608_Oslo_0520.txt  110608_Oslo_0521.txt  110608_Oslo_0522.txt  110608_Oslo_0523.txt  110608_Oslo_0524.txt  110608_Oslo_0525.txt  110608_Oslo_0526.txt  110608_Oslo_0527.txt  110608_Oslo_0528.txt  110608_Oslo_0529.txt  110608_Oslo_0530.txt  110608_Oslo_0531.txt  110608_Oslo_0532.txt  110608_Oslo_0533.txt  110608_Oslo_0534.txt  110608_Oslo_0535.txt  110608_Oslo_0536.txt  110608_Oslo_0537.txt  110608_Oslo_0538.txt  110608_Oslo_0539.txt  110608_Oslo_0540.txt  110608_Oslo_0541.txt  (+70 more)
examples/: main.cpp
include/plane_sweep/: attitude.h  cartesian_position.h  dataset.h  feature_utils.h  geodetic_position.h  homography_estimator.h  intrinsics.h  lab_1_2.h  local_coordinate_system.h  perspective_camera_model.h  plane_sweep.h  project.h  viewer_3d.h
src/: attitude.cpp  cartesian_position.cpp  dataset.cpp  feature_utils.cpp  geodetic_position.cpp  homography_estimator.cpp  intrinsics.cpp  lab_1_2.cpp  local_coordinate_system.cpp  perspective_camera_model.cpp  plane_sweep.cpp  project.cpp  viewer_3d.cpp
